@@ -7,6 +7,9 @@ lbdb (0.28) unstable; urgency=low
     encodings etc. in the FN field, thanks to Rogerio Brito
     <rbrito@ime.usp.br> (Closes: #198633).
   * Search for .gnome/GnomeCard.gcd in $HOME instead of current directory.
+  * m_abook: Search for $HOME/.abook/addressbook in addition to
+    $HOME/.abook.addressbook to honor the fact that this file was moved in
+    abook 0.5 (Closes: #205418).
   
  --
 
